[gd_scene load_steps=4 format=2]

[ext_resource path="res://Game/Scripts/Main/Docks/MonsterCardDock.gd" type="Script" id=1]
[ext_resource path="res://Game/Assets/Images/Experimental/DamageIndicator.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 33.4225, 31.0057 )

[node name="MonsterCardDock" type="KinematicBody2D"]
input_pickable = true
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Animation" type="AnimatedSprite" parent="."]

[node name="Centre" type="Position2D" parent="."]
position = Vector2( -1.02967, -1.35143 )

[node name="PlayerOwnershipIndicator" type="Label" parent="."]
margin_left = -44.0
margin_top = -66.0
margin_right = 45.0
margin_bottom = -52.0
text = "sample"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthIndicator" type="Label" parent="."]
margin_left = -44.0
margin_top = 35.0
margin_right = 45.0
margin_bottom = 49.0
text = "health"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttributeIndicator" type="Label" parent="."]
margin_left = -44.2462
margin_top = 49.1123
margin_right = 17.7538
margin_bottom = 63.1123
text = "attribute"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DamageIndicator" type="Sprite" parent="."]
position = Vector2( 0.440308, 0.230885 )
texture = ExtResource( 2 )

[node name="DamageIndicatorLabel" type="Label" parent="."]
margin_left = -21.4732
margin_top = -8.49487
margin_right = 18.5268
margin_bottom = 5.50513
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DamageIndicatorLingerTime" type="Timer" parent="."]
one_shot = true
[connection signal="mouse_entered" from="." to="." method="_on_MonsterCardDock_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_MonsterCardDock_mouse_exited"]
[connection signal="timeout" from="DamageIndicatorLingerTime" to="." method="_on_DamageIndicatorLingerTime_timeout"]
